// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CategoriesController getPageCount returns correct page count 1`] = `3`;

exports[`CategoriesController getTagById returns requested tag 1`] = `
Object {
  "category": "artists",
  "id": 203906,
  "name": "dignissimos",
  "tagged": 55552,
  "uri": "https://far-working.info",
}
`;

exports[`CategoriesController getTags returns all tags sorted by name 1`] = `
Array [
  Object {
    "category": "artists",
    "id": 828844,
    "name": "autem",
    "tagged": 25470,
    "uri": "https://boiling-obesity.com",
  },
  Object {
    "category": "artists",
    "id": 39054,
    "name": "debitis",
    "tagged": 86502,
    "uri": "https://svelte-bit.net",
  },
  Object {
    "category": "artists",
    "id": 203906,
    "name": "dignissimos",
    "tagged": 55552,
    "uri": "https://far-working.info",
  },
  Object {
    "category": "artists",
    "id": 456974,
    "name": "dolore",
    "tagged": 22539,
    "uri": "http://prestigious-rhinoceros.org",
  },
  Object {
    "category": "artists",
    "id": 789278,
    "name": "doloribus",
    "tagged": 66063,
    "uri": "https://focused-downgrade.info",
  },
  Object {
    "category": "artists",
    "id": 842030,
    "name": "eos",
    "tagged": 28871,
    "uri": "https://elliptical-meeting.org",
  },
  Object {
    "category": "artists",
    "id": 66536,
    "name": "et",
    "tagged": 7425,
    "uri": "http://bruised-rip.com",
  },
  Object {
    "category": "artists",
    "id": 450873,
    "name": "et",
    "tagged": 466,
    "uri": "http://fair-plier.info",
  },
  Object {
    "category": "artists",
    "id": 731727,
    "name": "et",
    "tagged": 70433,
    "uri": "http://odd-satisfaction.org",
  },
  Object {
    "category": "artists",
    "id": 854114,
    "name": "et",
    "tagged": 62463,
    "uri": "https://disgusting-song.name",
  },
  Object {
    "category": "artists",
    "id": 798603,
    "name": "inventore",
    "tagged": 87985,
    "uri": "https://keen-councilman.net",
  },
  Object {
    "category": "artists",
    "id": 370083,
    "name": "libero",
    "tagged": 46215,
    "uri": "http://competent-baritone.net",
  },
  Object {
    "category": "artists",
    "id": 22330,
    "name": "modi",
    "tagged": 4830,
    "uri": "https://unrealistic-self-control.net",
  },
  Object {
    "category": "artists",
    "id": 967275,
    "name": "natus",
    "tagged": 65432,
    "uri": "http://colossal-battleship.biz",
  },
  Object {
    "category": "artists",
    "id": 878831,
    "name": "nisi",
    "tagged": 28147,
    "uri": "https://grimy-mozzarella.org",
  },
  Object {
    "category": "artists",
    "id": 546346,
    "name": "nulla",
    "tagged": 2388,
    "uri": "https://white-influence.info",
  },
  Object {
    "category": "artists",
    "id": 949015,
    "name": "perferendis",
    "tagged": 42681,
    "uri": "http://second-orient.net",
  },
  Object {
    "category": "artists",
    "id": 499583,
    "name": "quaerat",
    "tagged": 21868,
    "uri": "http://insignificant-concrete.info",
  },
  Object {
    "category": "artists",
    "id": 599109,
    "name": "quibusdam",
    "tagged": 57706,
    "uri": "http://coarse-kinase.org",
  },
  Object {
    "category": "artists",
    "id": 699757,
    "name": "sunt",
    "tagged": 61393,
    "uri": "http://well-groomed-needle.biz",
  },
  Object {
    "category": "artists",
    "id": 181612,
    "name": "vel",
    "tagged": 70568,
    "uri": "http://energetic-win.com",
  },
  Object {
    "category": "artists",
    "id": 540951,
    "name": "vel",
    "tagged": 50299,
    "uri": "https://speedy-library.org",
  },
]
`;

exports[`CategoriesController getTags works with any page 1`] = `
Array [
  Object {
    "category": "artists",
    "id": 798603,
    "name": "inventore",
    "tagged": 87985,
    "uri": "https://keen-councilman.net",
  },
  Object {
    "category": "artists",
    "id": 370083,
    "name": "libero",
    "tagged": 46215,
    "uri": "http://competent-baritone.net",
  },
  Object {
    "category": "artists",
    "id": 22330,
    "name": "modi",
    "tagged": 4830,
    "uri": "https://unrealistic-self-control.net",
  },
  Object {
    "category": "artists",
    "id": 967275,
    "name": "natus",
    "tagged": 65432,
    "uri": "http://colossal-battleship.biz",
  },
  Object {
    "category": "artists",
    "id": 878831,
    "name": "nisi",
    "tagged": 28147,
    "uri": "https://grimy-mozzarella.org",
  },
  Object {
    "category": "artists",
    "id": 546346,
    "name": "nulla",
    "tagged": 2388,
    "uri": "https://white-influence.info",
  },
  Object {
    "category": "artists",
    "id": 949015,
    "name": "perferendis",
    "tagged": 42681,
    "uri": "http://second-orient.net",
  },
  Object {
    "category": "artists",
    "id": 499583,
    "name": "quaerat",
    "tagged": 21868,
    "uri": "http://insignificant-concrete.info",
  },
  Object {
    "category": "artists",
    "id": 599109,
    "name": "quibusdam",
    "tagged": 57706,
    "uri": "http://coarse-kinase.org",
  },
  Object {
    "category": "artists",
    "id": 699757,
    "name": "sunt",
    "tagged": 61393,
    "uri": "http://well-groomed-needle.biz",
  },
  Object {
    "category": "artists",
    "id": 181612,
    "name": "vel",
    "tagged": 70568,
    "uri": "http://energetic-win.com",
  },
  Object {
    "category": "artists",
    "id": 540951,
    "name": "vel",
    "tagged": 50299,
    "uri": "https://speedy-library.org",
  },
]
`;

exports[`CategoriesController getTagsByLetter is case insensitive 1`] = `
Array [
  Object {
    "category": "artists",
    "id": 828844,
    "name": "autem",
    "tagged": 25470,
    "uri": "https://boiling-obesity.com",
  },
]
`;

exports[`CategoriesController getTagsByLetter is case insensitive 2`] = `
Array [
  Object {
    "category": "artists",
    "id": 828844,
    "name": "autem",
    "tagged": 25470,
    "uri": "https://boiling-obesity.com",
  },
]
`;

exports[`CategoriesController getTagsByLetter returns all tags starting with requested letter 1`] = `
Array [
  Object {
    "category": "artists",
    "id": 828844,
    "name": "autem",
    "tagged": 25470,
    "uri": "https://boiling-obesity.com",
  },
]
`;

exports[`CategoriesController getTagsByPopularity returns tags sorted by popularity 1`] = `
Array [
  Object {
    "category": "artists",
    "id": 798603,
    "name": "inventore",
    "tagged": 87985,
    "uri": "https://keen-councilman.net",
  },
  Object {
    "category": "artists",
    "id": 39054,
    "name": "debitis",
    "tagged": 86502,
    "uri": "https://svelte-bit.net",
  },
  Object {
    "category": "artists",
    "id": 181612,
    "name": "vel",
    "tagged": 70568,
    "uri": "http://energetic-win.com",
  },
  Object {
    "category": "artists",
    "id": 731727,
    "name": "et",
    "tagged": 70433,
    "uri": "http://odd-satisfaction.org",
  },
  Object {
    "category": "artists",
    "id": 789278,
    "name": "doloribus",
    "tagged": 66063,
    "uri": "https://focused-downgrade.info",
  },
  Object {
    "category": "artists",
    "id": 967275,
    "name": "natus",
    "tagged": 65432,
    "uri": "http://colossal-battleship.biz",
  },
  Object {
    "category": "artists",
    "id": 854114,
    "name": "et",
    "tagged": 62463,
    "uri": "https://disgusting-song.name",
  },
  Object {
    "category": "artists",
    "id": 699757,
    "name": "sunt",
    "tagged": 61393,
    "uri": "http://well-groomed-needle.biz",
  },
  Object {
    "category": "artists",
    "id": 599109,
    "name": "quibusdam",
    "tagged": 57706,
    "uri": "http://coarse-kinase.org",
  },
  Object {
    "category": "artists",
    "id": 203906,
    "name": "dignissimos",
    "tagged": 55552,
    "uri": "https://far-working.info",
  },
  Object {
    "category": "artists",
    "id": 540951,
    "name": "vel",
    "tagged": 50299,
    "uri": "https://speedy-library.org",
  },
  Object {
    "category": "artists",
    "id": 370083,
    "name": "libero",
    "tagged": 46215,
    "uri": "http://competent-baritone.net",
  },
  Object {
    "category": "artists",
    "id": 949015,
    "name": "perferendis",
    "tagged": 42681,
    "uri": "http://second-orient.net",
  },
  Object {
    "category": "artists",
    "id": 842030,
    "name": "eos",
    "tagged": 28871,
    "uri": "https://elliptical-meeting.org",
  },
  Object {
    "category": "artists",
    "id": 878831,
    "name": "nisi",
    "tagged": 28147,
    "uri": "https://grimy-mozzarella.org",
  },
  Object {
    "category": "artists",
    "id": 828844,
    "name": "autem",
    "tagged": 25470,
    "uri": "https://boiling-obesity.com",
  },
  Object {
    "category": "artists",
    "id": 456974,
    "name": "dolore",
    "tagged": 22539,
    "uri": "http://prestigious-rhinoceros.org",
  },
  Object {
    "category": "artists",
    "id": 499583,
    "name": "quaerat",
    "tagged": 21868,
    "uri": "http://insignificant-concrete.info",
  },
  Object {
    "category": "artists",
    "id": 66536,
    "name": "et",
    "tagged": 7425,
    "uri": "http://bruised-rip.com",
  },
  Object {
    "category": "artists",
    "id": 22330,
    "name": "modi",
    "tagged": 4830,
    "uri": "https://unrealistic-self-control.net",
  },
  Object {
    "category": "artists",
    "id": 546346,
    "name": "nulla",
    "tagged": 2388,
    "uri": "https://white-influence.info",
  },
  Object {
    "category": "artists",
    "id": 450873,
    "name": "et",
    "tagged": 466,
    "uri": "http://fair-plier.info",
  },
]
`;

exports[`CategoriesController getTagsByPopularity works with other pages 1`] = `
Array [
  Object {
    "category": "artists",
    "id": 540951,
    "name": "vel",
    "tagged": 50299,
    "uri": "https://speedy-library.org",
  },
  Object {
    "category": "artists",
    "id": 370083,
    "name": "libero",
    "tagged": 46215,
    "uri": "http://competent-baritone.net",
  },
  Object {
    "category": "artists",
    "id": 949015,
    "name": "perferendis",
    "tagged": 42681,
    "uri": "http://second-orient.net",
  },
  Object {
    "category": "artists",
    "id": 842030,
    "name": "eos",
    "tagged": 28871,
    "uri": "https://elliptical-meeting.org",
  },
  Object {
    "category": "artists",
    "id": 878831,
    "name": "nisi",
    "tagged": 28147,
    "uri": "https://grimy-mozzarella.org",
  },
  Object {
    "category": "artists",
    "id": 828844,
    "name": "autem",
    "tagged": 25470,
    "uri": "https://boiling-obesity.com",
  },
  Object {
    "category": "artists",
    "id": 456974,
    "name": "dolore",
    "tagged": 22539,
    "uri": "http://prestigious-rhinoceros.org",
  },
  Object {
    "category": "artists",
    "id": 499583,
    "name": "quaerat",
    "tagged": 21868,
    "uri": "http://insignificant-concrete.info",
  },
  Object {
    "category": "artists",
    "id": 66536,
    "name": "et",
    "tagged": 7425,
    "uri": "http://bruised-rip.com",
  },
  Object {
    "category": "artists",
    "id": 22330,
    "name": "modi",
    "tagged": 4830,
    "uri": "https://unrealistic-self-control.net",
  },
  Object {
    "category": "artists",
    "id": 546346,
    "name": "nulla",
    "tagged": 2388,
    "uri": "https://white-influence.info",
  },
  Object {
    "category": "artists",
    "id": 450873,
    "name": "et",
    "tagged": 466,
    "uri": "http://fair-plier.info",
  },
]
`;

exports[`CategoriesController search returns all tags matching search query 1`] = `
Array [
  Object {
    "category": "tags",
    "id": 988615,
    "name": "id",
    "tagged": 76257,
    "uri": "https://jittery-estuary.name",
  },
  Object {
    "category": "parodies",
    "id": 931971,
    "name": "id",
    "tagged": 52273,
    "uri": "https://serpentine-timber.com",
  },
  Object {
    "category": "parodies",
    "id": 586832,
    "name": "in",
    "tagged": 41738,
    "uri": "https://granular-drizzle.net",
  },
  Object {
    "category": "artists",
    "id": 798603,
    "name": "inventore",
    "tagged": 87985,
    "uri": "https://keen-councilman.net",
  },
  Object {
    "category": "tags",
    "id": 184010,
    "name": "ipsam",
    "tagged": 23526,
    "uri": "https://stupid-mortgage.name",
  },
  Object {
    "category": "parodies",
    "id": 421107,
    "name": "ipsum",
    "tagged": 5924,
    "uri": "https://querulous-bottom-line.name",
  },
  Object {
    "category": "groups",
    "id": 121343,
    "name": "iste",
    "tagged": 42838,
    "uri": "http://grubby-baggy.com",
  },
  Object {
    "category": "artists",
    "id": 203906,
    "name": "dignissimos",
    "tagged": 55552,
    "uri": "https://far-working.info",
  },
  Object {
    "category": "groups",
    "id": 641565,
    "name": "hic",
    "tagged": 92520,
    "uri": "https://dreary-topsail.com",
  },
  Object {
    "category": "artists",
    "id": 370083,
    "name": "libero",
    "tagged": 46215,
    "uri": "http://competent-baritone.net",
  },
]
`;

exports[`CategoriesController search returns all tags matching search query and category 1`] = `
Array [
  Object {
    "category": "artists",
    "id": 798603,
    "name": "inventore",
    "tagged": 87985,
    "uri": "https://keen-councilman.net",
  },
  Object {
    "category": "artists",
    "id": 203906,
    "name": "dignissimos",
    "tagged": 55552,
    "uri": "https://far-working.info",
  },
  Object {
    "category": "artists",
    "id": 370083,
    "name": "libero",
    "tagged": 46215,
    "uri": "http://competent-baritone.net",
  },
  Object {
    "category": "artists",
    "id": 878831,
    "name": "nisi",
    "tagged": 28147,
    "uri": "https://grimy-mozzarella.org",
  },
  Object {
    "category": "artists",
    "id": 599109,
    "name": "quibusdam",
    "tagged": 57706,
    "uri": "http://coarse-kinase.org",
  },
  Object {
    "category": "artists",
    "id": 39054,
    "name": "debitis",
    "tagged": 86502,
    "uri": "https://svelte-bit.net",
  },
  Object {
    "category": "artists",
    "id": 22330,
    "name": "modi",
    "tagged": 4830,
    "uri": "https://unrealistic-self-control.net",
  },
  Object {
    "category": "artists",
    "id": 789278,
    "name": "doloribus",
    "tagged": 66063,
    "uri": "https://focused-downgrade.info",
  },
  Object {
    "category": "artists",
    "id": 949015,
    "name": "perferendis",
    "tagged": 42681,
    "uri": "http://second-orient.net",
  },
]
`;

exports[`CategoriesController search works with any page 1`] = `
Array [
  Object {
    "category": "artists",
    "id": 878831,
    "name": "nisi",
    "tagged": 28147,
    "uri": "https://grimy-mozzarella.org",
  },
  Object {
    "category": "tags",
    "id": 743825,
    "name": "similique",
    "tagged": 27464,
    "uri": "http://black-and-white-descent.com",
  },
  Object {
    "category": "parodies",
    "id": 68209,
    "name": "similique",
    "tagged": 6703,
    "uri": "http://strong-fiberglass.name",
  },
  Object {
    "category": "parodies",
    "id": 621805,
    "name": "sint",
    "tagged": 79037,
    "uri": "http://dry-cheetah.biz",
  },
  Object {
    "category": "tags",
    "id": 246210,
    "name": "sit",
    "tagged": 39631,
    "uri": "http://carefree-android.name",
  },
  Object {
    "category": "parodies",
    "id": 846827,
    "name": "adipisci",
    "tagged": 93871,
    "uri": "https://happy-go-lucky-wash.com",
  },
  Object {
    "category": "parodies",
    "id": 137135,
    "name": "eligendi",
    "tagged": 55132,
    "uri": "https://big-hearted-cloud.info",
  },
  Object {
    "category": "tags",
    "id": 964839,
    "name": "enim",
    "tagged": 35653,
    "uri": "https://silky-highlight.org",
  },
  Object {
    "category": "characters",
    "id": 685218,
    "name": "qui",
    "tagged": 93553,
    "uri": "https://testy-head.biz",
  },
  Object {
    "category": "parodies",
    "id": 237026,
    "name": "qui",
    "tagged": 35531,
    "uri": "https://warm-hacienda.info",
  },
]
`;
